# AmpleOS

./: CMakeLists.txt  CMakePresets.json  README.md
Meta/Scripts/: Run.sh  SetupImage.sh  SetupRootFileSystem.sh  SetupToolchain.sh
Meta/Scripts/Configs/: i686-toolchain.config
Services/System/: CMakeLists.txt  Main.cpp
